force-app/main/default/objects/AIG_Milestone_Task__c/AIG_Milestone_Task__c.object-meta.xml
<CustomObject>
    <label>Milestone Stage</label>
    <nameField>
        <label>Milestone Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>