force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>AIG_Actual_Date__c</fullName>
    <description>This date is User populated and it represents the actual date when the Milestone task is Completed.</description>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>