force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>AIG_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Milestone_Task</relationshipName>
    <type>Lookup</type>
</CustomField>