force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>AIG_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Milestone_Task</relationshipName>
    <type>Lookup</type>
</CustomField>