force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Description__c.field-meta.xml
<CustomField>
    <fullName>AIG_Description__c</fullName>
    <description>User Enter field to enter Notes, to why a date was modified and why completion date didn&apos;t meet the target date.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>