force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Estimated_Date__c.field-meta.xml
<CustomField>
    <fullName>AIG_Estimated_Date__c</fullName>
    <label>Modified Target Date</label>
    <type>Date</type>
</CustomField>