force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>AIG_Milestone_Type__c</fullName>
    <description>Milestone Type</description>
    <formula>TEXT(Milestone__r.Milestone_Type__c)</formula>
    <inlineHelpText>Milestone Type : Proposal Timeline or Proposal Timeline</inlineHelpText>
    <label>Milestone Type</label>
    <type>Text</type>
</CustomField>