force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>AIG_Target_Date__c</fullName>
    <label>System-Generated Target Date</label>
    <type>Date</type>
</CustomField>