force-app/main/default/objects/AIG_Milestone_Task__c/fields/AIG_Variance__c.field-meta.xml
<CustomField>
    <fullName>AIG_Variance__c</fullName>
    <formula>AIG_Target_Date__c -  AIG_Estimated_Date__c</formula>
    <label>Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>