force-app/main/default/objects/AIG_Milestone_Task__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <referenceTo>AIG_Milestone__c</referenceTo>
    <relationshipName>AIG_Milestone</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>