force-app/main/default/objects/AIG_Milestone_Task__c/validationRules/AIG_cannot_update_system_target_date.validationRule-meta.xml
<ValidationRule>
    <fullName>AIG_cannot_update_system_target_date</fullName>
    <active>false</active>
    <description>No user can Update System Generated Target Date</description>
    <errorConditionFormula>ISCHANGED(AIG_Target_Date__c)</errorConditionFormula>
    <errorDisplayField>AIG_Target_Date__c</errorDisplayField>
    <errorMessage>System Generated Target Date cannot be updated.</errorMessage>
</ValidationRule>