force-app/main/default/objects/AIG_Milestone_Task__c/validationRules/Name_cannot_be_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_cannot_be_updated</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Milestone stage name cannot be updated.</errorMessage>
</ValidationRule>